feat: add create pet endpoint
