# src/main/java/com/kcm/msp/dev/app/development/prototype/microservice/service/PetService.java
@@ -1,5 +1,6 @@
 package com.kcm.msp.dev.app.development.prototype.microservice.service;
 
+import com.kcm.msp.dev.app.development.prototype.microservice.models.CreatePetRequest;
 import com.kcm.msp.dev.app.development.prototype.microservice.models.Pet;
 import java.util.List;
 
@@ -7,4 +8,6 @@ public interface PetService {
   List<Pet> listPets(Integer limit);
 
   Pet showPetById(String id);
+
+  Pet createPet(CreatePetRequest request);
 }
