# src/main/java/com/kcm/msp/dev/app/development/prototype/microservice/service/impl/PetServiceImpl.java
@@ -1,20 +1,39 @@
 package com.kcm.msp.dev.app.development.prototype.microservice.service.impl;
 
 import com.kcm.msp.dev.app.development.prototype.microservice.exception.ItemNotFoundException;
+import com.kcm.msp.dev.app.development.prototype.microservice.models.CreatePetRequest;
 import com.kcm.msp.dev.app.development.prototype.microservice.models.Pet;
 import com.kcm.msp.dev.app.development.prototype.microservice.service.PetService;
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Objects;
+import java.util.Random;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 @Service
 public class PetServiceImpl implements PetService {
 
+  public static final Random RANDOM = new Random();
+  private static final List<Pet> SAMPLE_PETS =
+      Stream.iterate(1, n -> n + 1)
+          .limit(21)
+          .map(
+              value ->
+                  new Pet()
+                      .id(Long.valueOf(value))
+                      .name("petName" + value)
+                      .tag("petTag" + value)
+                      .dateOfBirth(LocalDate.now())
+                      .ownerEmail("test" + value + "@email.com"))
+          .toList();
+
   @Override
   public List<Pet> listPets(final Integer limit) {
-    final Pet pet = new Pet().id(123L).name("petName").tag("petTag").dateOfBirth(LocalDate.now());
-    return List.of(pet);
+    Objects.requireNonNull(limit, "Limit cannot be null");
+    return SAMPLE_PETS.stream().limit(limit).collect(Collectors.toList());
   }
 
   @Override
@@ -23,5 +42,19 @@ public class PetServiceImpl implements PetService {
       throw new ItemNotFoundException("Item not found");
     }
     return new Pet().id(123L).name("petName").tag("petTag");
+  }
+
+  @Override
+  public Pet createPet(final CreatePetRequest request) {
+    Objects.requireNonNull(request, "CreatePetRequest cannot be null");
+    final Pet pet =
+        new Pet()
+            .id(RANDOM.nextLong())
+            .name(request.getName())
+            .tag(request.getTag())
+            .dateOfBirth(request.getDateOfBirth())
+            .ownerEmail(request.getOwnerEmail());
+    SAMPLE_PETS.add(pet);
+    return pet;
   }
 }
